--- a/views/thank_you.erb
+++ b/views/thank_you.erb
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<meta http-equiv=Content-Type content="text/html; charset=utf-8">
+		<meta name="viewport" 
+                content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=0">
 		<style type="text/css">
 
 		</style>
