--- a/views/analysis.erb
+++ b/views/analysis.erb
@@ -4,7 +4,14 @@
 		<meta name="viewport" 
         content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=0">
 		<style type="text/css">
-
+			body{
+				top: 3em;
+				bottom: 3em;
+				left: 5%;
+				right: 5%;
+				width: 90%;
+				position: absolute;
+			}
 		</style>
 		<title>调查结果</title>
 		<!-- 新 Bootstrap 核心 CSS 文件 -->
@@ -17,6 +24,7 @@
 		<script src="//cdn.hcharts.cn/highcharts/highcharts.js"></script>
 	</head>
 	<body>
+		<h1>调查结果</h1>
 		<div id="chart-field"></div>
 		<script>
 			$.getJSON("/vote_analysis",function(data){
@@ -64,5 +72,6 @@
 				});
 			});
 		</script>
+		<a class="btn btn-info btn-block" href="/correlation">探究相关性</a>
 	</body>
 </html>
