--- a/views/thank_you.erb
+++ b/views/thank_you.erb
@@ -4,7 +4,14 @@
 		<meta name="viewport" 
                 content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=0">
 		<style type="text/css">
-
+			body{
+				top: 3em;
+				bottom: 3em;
+				left: 5%;
+				right: 5%;
+				width: 90%;
+				position: absolute;
+			}
 		</style>
 		<title>感谢您的参与!</title>
 		<!-- 新 Bootstrap 核心 CSS 文件 -->
