--- a/views/analysis.erb
+++ b/views/analysis.erb
@@ -29,6 +29,8 @@
 		</script>
 	</head>
 	<body>
+        <div class="panel panel-default">
+		<div class="panel-body">
 		<h1>调查结果</h1>
 		<div id="chart-field"></div>
 		<script>
@@ -130,5 +132,7 @@
 			});
 		});
 		</script>
+		</div>
+		</div>
 	</body>
 </html>
