--- a/views/vote.erb
+++ b/views/vote.erb
@@ -36,7 +36,9 @@
 		var OPTIONS_MAX=10;
 		var TIMEOUT=400;
 	</script>
-		<div>
+        <div class="panel panel-default">
+		<div class="panel-body">
+		<h1>厦门大学大学生生育观念调查</h1>
 			<label>我们不会记录有关您的任何信息。</label>
 			<h3 id="ques"></h3>
 			<div class="bg-info" id="about-text"></div>
@@ -51,6 +53,7 @@
 				确定
 			</button>
 			<label id="ques_num"></label>
+		</div>
 		</div>
 	<script src="/index_vote.js"></script>
 	<a href="/analysis">直接查看结果?</a>
