允许使用键盘输入

--- a/views/vote.erb
+++ b/views/vote.erb
@@ -49,7 +49,7 @@
 				document.write('</div>');
 			}
 			</script>
-			<button class="btn btn-info btn-block btn-raised" id="next_btn" onmousedown="javascript:record();">
+			<button class="btn btn-primary btn-block btn-raised" id="next_btn" onmousedown="javascript:record();">
 				确定
 			</button>
 			<label id="ques_num"></label>
